Fix for Firefox: header was collapsing into nav

--- a/src/assets/less/header.less
+++ b/src/assets/less/header.less
@@ -1,4 +1,5 @@
 #masthead {
+	clear: both;
 	text-align: center;
 }
 
